# zero

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/zero/: config.hpp  monads.hpp  utility.hpp
test/: CMakeLists.txt  main.cpp
